# repotablo

./: .cliff.toml  .dprint.jsonc  CHANGELOG.md  Cargo.toml  Makefile  README.md  justfile
.github/workflows/: ci.yaml  ci.yml  ci_backend.yaml  ci_backend.yml  ci_frontend.yml  release.yml
backend/: .example.env  Cargo.toml  Makefile  README.md  justfile
backend/src/: config.rs  context.rs  lib.rs  main.rs  routes.rs  schema.rs
backend/src/errors/: mod.rs
backend/src/health/: resolver.rs
backend/src/health/model/: mod.rs
backend/src/health/service/: get_health.rs
backend/src/meta/: resolver.rs
backend/src/meta/service/: get_meta.rs
backend/src/parser/: entities.rs  resolver.rs
backend/src/parser/model/: mod.rs
backend/src/parser/service/: mod.rs  parse_link.rs
backend/tests/: schema.graphql
docs/: README.md
frontend/: components.d.ts  justfile  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  auto-imports.d.ts  main.ts
frontend/src/components/: NavBar.vue
frontend/src/pages/: [...all].vue  about.vue  index.vue
frontend/src/stores/: links.ts
scripts/: release.sh
src/: cli.rs  error.rs  input.rs  lib.rs  main.rs  repo.rs  stats.rs  ui.rs
src/ui/: colors.rs  draw.rs  keys.rs  mod.rs
