[package]
name = "repotablo"
version = "0.0.2"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["stargazers", "github"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/repotablo"
description = "Rank repositories, fast!"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
itertools = "0.14.0"
ratatui = "0.30.0"
unicode-width = "0.2.2"

chrono = "0.4.43"
chrono-humanize = "0.2.3"
futures = "0.3"
octocrab = "0.41"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
