[package]
name = "repotablo"
version = "0.0.2"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["stargazers", "github"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/repotablo"
description = "Rank repositories, fast!"

[dependencies]
# tui
crossterm = "0.29.0"
ratatui = "0.30.0"

# sdk
octocrab = "0.49"

# error
color-eyre = "0.6.5"

# input
regex = "1"
tempfile = "3"

# misc
chrono = "0.4.43"
chrono-humanize = "0.2.3"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
