[package]
name = "repotablo"
version = "0.1.0"
authors = ["azzamsa <me@azzamsa.com>"]
categories = ["command-line-utilities"]
edition = "2024"
keywords = ["stargazers", "github"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/azzamsa/repotablo"
description = "Rank repositories, fast!"

[dependencies]
# cli
clap = { version = "4.5.60", features = ["suggestions", "color", "cargo", "derive", "env"] }

# tui
crossterm = "0.29.0"
ratatui = "0.30.0"

# sdk
octocrab = "0.49"

# error
miette = { version = "7.6", features = ["fancy"] }
thiserror = "2.0.18"

# input
regex = "1"
reqwest = { version = "0.12.28", features = ["rustls-tls"] }
tempfile = "3"

# async
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# time
chrono = "0.4.43"
chrono-humanize = "0.2.3"

# misc
arboard = "3"
open = "5"
serde = { version = "1.0.228", features = ["derive"] }

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "v{{version}}"
pre-release-commit-message = "v{{version}}"
pre-release-hook = ["just", "_release-prepare", "{{version}}"]
