[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parser
pulldown-cmark = "0.9"

# Web server
axum = "0.5"
hyper = "0.14"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }

# GraphQL
async-graphql = { version = "4.0", features = ["uuid", "chrono"] }
async-graphql-axum = "4.0"

# Rest
utoipa = { version = "2.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "2.0", features = ["axum"] }

# Logging
time = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }

dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
cynic = "2.0"
mime = "0.3"
tower = { version = "0.4", features = ["util"] }
